--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.2.13",
     "@angular/platform-browser-dynamic": "~11.2.13",
     "@angular/router": "~11.2.13",
+    "ng-recaptcha": "^8.0.0",
     "primeicons": "^4.1.0",
     "primeng": "^11.4.1",
     "rxjs": "~6.6.0",
